--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,2 +1,39 @@
-<h1>APP</h1>
+<mat-toolbar class="example-toolbar" color="primary">
+  <button (click)="drawer.toggle()" mat-icon-button class="example-icon">
+    <mat-icon class="icon-display">menu</mat-icon>
+  </button>
+  <span></span>
+  <span></span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon">
+    <mat-icon class="icon-display">home</mat-icon>
+  </button>
+  <span></span>
+  <span></span>
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon class="icon-display">power_settings_new</mat-icon>
+  </button>
+</mat-toolbar>
+
+<mat-drawer-container class="example-container" autosize>
+  <mat-drawer #drawer class="example-sidenav" mode="side">
+    <p>Auto-resizing sidenav</p>
+    <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
+    <button (click)="showFiller = !showFiller" mat-raised-button>
+      Toggle extra text
+    </button>
+  </mat-drawer>
+
+  <div class="example-sidenav-content">
+    <h1>APP</h1>
+  </div>
+
 <router-outlet></router-outlet>
+
+</mat-drawer-container>
+
+<mat-toolbar class="example-toolbar-bottom" color="primary">
+  <button mat-icon-button class="example-icon">
+    <mat-icon class="icon-display">add_circle_outline</mat-icon>
+  </button>
+</mat-toolbar>
