--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,17 +1,17 @@
 <mat-toolbar class="example-toolbar" color="primary">
-  <button (click)="drawer.toggle()" mat-icon-button class="example-icon">
+  <button [disabled]="!isLoggedIn" (click)="drawer.toggle()" mat-icon-button class="example-icon">
     <mat-icon class="icon-display">menu</mat-icon>
   </button>
   <span></span>
   <span></span>
   <span class="example-spacer"></span>
-  <button mat-icon-button class="example-icon favorite-icon">
+  <button (click)="isLoggedIn? router.navigate(['/home']) : router.navigate(['/'])" mat-icon-button class="example-icon favorite-icon">
     <mat-icon class="icon-display">home</mat-icon>
   </button>
   <span></span>
   <span></span>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon class="icon-display">power_settings_new</mat-icon>
+  <button (click)="isLoggedIn? logout(): router.navigate(['/auth/login'])" mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon class="icon-display">{{isLoggedIn ? 'power_settings_new' : 'login'}}</mat-icon>
   </button>
 </mat-toolbar>
 
@@ -25,15 +25,14 @@
   </mat-drawer>
 
   <div class="example-sidenav-content">
-    <h1>APP</h1>
+    <router-outlet></router-outlet>
   </div>
 
-<router-outlet></router-outlet>
 
 </mat-drawer-container>
 
 <mat-toolbar class="example-toolbar-bottom" color="primary">
-  <button mat-icon-button class="example-icon">
+  <button [disabled]="!isLoggedIn" mat-icon-button class="example-icon">
     <mat-icon class="icon-display">add_circle_outline</mat-icon>
   </button>
 </mat-toolbar>
