Set welcome page

--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -5,7 +5,7 @@
   <span></span>
   <span></span>
   <span class="example-spacer"></span>
-  <button (click)="isLoggedIn? router.navigate(['/home']) : router.navigate(['/'])" mat-icon-button class="example-icon favorite-icon">
+  <button (click)="isLoggedIn? router.navigate(['/home']) : router.navigate(['/welcome'])" mat-icon-button class="example-icon favorite-icon">
     <mat-icon class="icon-display">home</mat-icon>
   </button>
   <span></span>
