--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,11 +1,11 @@
 <mat-card>
   <mat-card-title>Welcome back</mat-card-title>
   <mat-card-subtitle>Need an account?</mat-card-subtitle>
-  <mat-card-subtitle (click)="router.navigate(['/auth/register'])">Register here</mat-card-subtitle>
+  <mat-card-subtitle class="link" (click)="router.navigate(['/auth/register'])">Register here</mat-card-subtitle>
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="login()">
       <div>
-        <mat-form-field>
+        <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
           <input type="email" matInput placeholder="Email" formControlName="username">
           <mat-error *ngIf="username.touched && username.hasError('required')">Email is required</mat-error>
@@ -13,14 +13,14 @@
         </mat-form-field>
       </div>
       <div>
-        <mat-form-field>
+        <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
           <input type="password" matInput placeholder="Password" formControlName="password">
           <mat-error *ngIf="password.touched && password.hasError('required')">Password is required</mat-error>
         </mat-form-field>
       </div>
       <div>
-        <button mat-button type="submit" [disabled]="!form.valid">Login</button>
+        <button mat-button color="primary" type="submit" [disabled]="!form.valid">Login</button>
       </div>
 
     </form>
