--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div class="main-div">
   <p>It looks like you don't have an account yet</p>
   <p class="link" (click)="router.navigate(['/auth/register'])">Click here to register</p>
-  <p>or</p>
+  <p style="margin: unset">or</p>
   <p class="link" (click)="router.navigate(['/auth/login'])">login if you already have an account</p>
   <img class="blockchain_city" src="assets/images/blockchain-city.svg" alt="Blockchain City">
 </div>
