--- a/src/app/components/wallets/wallets.component.html
+++ b/src/app/components/wallets/wallets.component.html
@@ -1,2 +1,23 @@
-<app-mobile *ngIf="isMobile"></app-mobile>
-<app-desktop *ngIf="!isMobile"></app-desktop>
+<mat-card *ngFor="let wallet of userWallets" class="example-card">
+  <mat-card-header>
+    <div class="example-header-image" mat-card-avatar></div>
+  </mat-card-header>
+  <mat-card-content>
+    <mat-card-title>{{wallet.name}}</mat-card-title>
+    <mat-card-subtitle>Bitcoin</mat-card-subtitle>
+    <div class="wallet-keys">
+      <p>Public address</p>
+      <p>{{wallet.address}}</p>
+      <button mat-button>COPY PUBLIC ADDRESS</button>
+    </div>
+    <div *ngIf="isPkVisibleForWallet(wallet.address)" class="wallet-keys">
+      <p>Private key</p>
+      <p>{{wallet.pk}}</p>
+      <button mat-button>COPY PRIVATE KEY</button>
+    </div>
+  </mat-card-content>
+  <mat-card-actions>
+    <button (click)="changePrivateKeyVisibility(wallet.address)"
+            mat-button>{{ isPkVisibleForWallet(wallet.address) ? 'HIDE PRIVATE KEY' : 'SHOW PRIVATE KEY' }}</button>
+  </mat-card-actions>
+</mat-card>
