--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,13 +1,13 @@
 <mat-card>
   <mat-card-title>Welcome back</mat-card-title>
   <mat-card-subtitle>Need an account?</mat-card-subtitle>
-  <mat-card-subtitle class="link" (click)="router.navigate(['/auth/register'])">Register here</mat-card-subtitle>
+  <mat-card-subtitle (click)="router.navigate(['/auth/register'])" class="link">Register here</mat-card-subtitle>
   <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="login()">
+    <form (ngSubmit)="login()" [formGroup]="form">
       <div>
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
-          <input type="email" matInput placeholder="Email" formControlName="username">
+          <input formControlName="username" matInput placeholder="Email" type="email">
           <mat-error *ngIf="username.touched && username.hasError('required')">Email is required</mat-error>
           <mat-error *ngIf="username.touched && username.hasError('email')">Email must be valid</mat-error>
         </mat-form-field>
@@ -15,12 +15,12 @@
       <div>
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
-          <input type="password" matInput placeholder="Password" formControlName="password">
+          <input formControlName="password" matInput placeholder="Password" type="password">
           <mat-error *ngIf="password.touched && password.hasError('required')">Password is required</mat-error>
         </mat-form-field>
       </div>
       <div>
-        <button mat-button color="primary" type="submit" [disabled]="!form.valid">Login</button>
+        <button [disabled]="!form.valid" color="primary" mat-button type="submit">Login</button>
       </div>
 
     </form>
