--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -1,13 +1,13 @@
 <mat-card>
   <mat-card-title>Registration</mat-card-title>
   <mat-card-subtitle>Already registered?</mat-card-subtitle>
-  <mat-card-subtitle class="link" (click)="router.navigate(['/auth/login'])">Login here</mat-card-subtitle>
+  <mat-card-subtitle (click)="router.navigate(['/auth/login'])" class="link">Login here</mat-card-subtitle>
   <mat-card-content>
-    <form [formGroup]="form" (ngSubmit)="register()">
+    <form (ngSubmit)="register()" [formGroup]="form">
       <div>
         <mat-form-field appearance="outline">
           <mat-label>Name</mat-label>
-          <input type="text" matInput placeholder="Name" formControlName="name">
+          <input formControlName="name" matInput placeholder="Name" type="text">
           <mat-error *ngIf="name.touched && name.hasError('required')">Name is required</mat-error>
         </mat-form-field>
       </div>
@@ -15,7 +15,7 @@
       <div>
         <mat-form-field appearance="outline">
           <mat-label>Email</mat-label>
-          <input type="email" matInput placeholder="Email" formControlName="username">
+          <input formControlName="username" matInput placeholder="Email" type="email">
           <mat-error *ngIf="username.touched && username.hasError('required')">Email is required</mat-error>
           <mat-error *ngIf="username.touched && username.hasError('email')">Email must be valid</mat-error>
         </mat-form-field>
@@ -24,12 +24,12 @@
       <div>
         <mat-form-field appearance="outline">
           <mat-label>Password</mat-label>
-          <input type="password" matInput placeholder="Password" formControlName="password">
+          <input formControlName="password" matInput placeholder="Password" type="password">
           <mat-error *ngIf="password.touched && password.hasError('required')">Password is required</mat-error>
         </mat-form-field>
       </div>
       <div>
-        <button mat-button color="primary" type="submit" [disabled]="!form.valid">Register</button>
+        <button [disabled]="!form.valid" color="primary" mat-button type="submit">Register</button>
       </div>
 
     </form>
