--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div class="main-div">
   <p>It looks like you don't have an account yet</p>
-  <p class="link" (click)="router.navigate(['/auth/register'])">Click here to register</p>
+  <p (click)="router.navigate(['/auth/register'])" class="link">Click here to register</p>
   <p style="margin: unset">or</p>
-  <p class="link" (click)="router.navigate(['/auth/login'])">login if you already have an account</p>
-  <img class="blockchain_city" src="assets/images/blockchain-city.svg" alt="Blockchain City">
+  <p (click)="router.navigate(['/auth/login'])" class="link">login if you already have an account</p>
+  <img alt="Blockchain City" class="blockchain_city" src="assets/images/blockchain-city.svg">
 </div>
