Add create wallet dialog, enhance wallets page and add animations

--- a/src/app/components/app.component.css
+++ b/src/app/components/app.component.css
@@ -2,6 +2,11 @@ span + span {
   margin-left: 20px;
 }
 
+.add-wallet-button:hover {
+  transform: scale(1.5);
+  transition: transform 1s ease;
+}
+
 .example-toolbar {
   height: 10vh;
 }
