--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -30,7 +30,7 @@
     <router-outlet></router-outlet>
 
     <div *ngIf="isLoggedIn" class="example-button-container">
-      <button aria-label="Example icon button with a delete icon" color="primary" mat-fab>
+      <button class="add-wallet-button" (click)="openDialog('3000ms', '1500ms')" color="primary" mat-fab>
         <mat-icon>add</mat-icon>
       </button>
     </div>
