--- a/src/app/components/auth/register/register.component.scss
+++ b/src/app/components/auth/register/register.component.scss
@@ -84,3 +84,9 @@ button:disabled {
   background-color: #c4c4c4;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+  -webkit-box-shadow: 0 0 0 30px ghostwhite inset !important;
+}
